[gd_scene load_steps=7 format=3 uid="uid://choeqkdwi341u"]

[ext_resource type="Theme" uid="uid://b6ou4s4eaow2o" path="res://UI/Themes/woody/woody_list_element.tres" id="1_nw0f4"]
[ext_resource type="Script" uid="uid://du0h3ougji0fi" path="res://UI/UI popups/stored_animal_element.gd" id="2_pk47t"]
[ext_resource type="Texture2D" uid="uid://s78mhwo52ucr" path="res://Animals/icons/alaskan-moose.png" id="3_oc0du"]
[ext_resource type="Texture2D" uid="uid://bdlat08gi440a" path="res://UI/Icons/gendericon_female.png" id="4_xnmlt"]
[ext_resource type="Theme" uid="uid://m8lfyd7syxb1" path="res://UI/Themes/woody/woody_button_red.tres" id="5_417sr"]
[ext_resource type="Theme" uid="uid://dw4clpeowimlb" path="res://UI/Themes/woody/woody_button_blue.tres" id="5_pk47t"]

[node name="StoredAnimalElement" type="PanelContainer"]
custom_minimum_size = Vector2(0, 100)
size_flags_horizontal = 3
theme = ExtResource("1_nw0f4")
script = ExtResource("2_pk47t")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="AnimalIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
texture = ExtResource("3_oc0du")
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="AnimalSpecies" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Alaskan moose"

[node name="AnimalAge" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "One year and two months"
horizontal_alignment = 1

[node name="GenderIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_xnmlt")
stretch_mode = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="InfoButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_pk47t")
text = "Info"
autowrap_mode = 2

[node name="ReleaseAnimalButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_417sr")
text = "Release"
autowrap_mode = 2

[node name="PlaceAnimalButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
text = "Place"
